--- a/app/src/main/res/drawable/ic_clear_black_24px.xml
+++ b/app/src/main/res/drawable/ic_clear_black_24px.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (c) 2018 DuckDuckGo
   ~
@@ -15,18 +14,12 @@
   ~ limitations under the License.
   -->
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <item
-        android:id="@+id/fire_menu_item"
-        android:icon="@drawable/icon_fire"
-        android:title="@string/privacyDashboard"
-        app:showAsAction="ifRoom" />
-
-    <item
-        android:id="@+id/settings_menu_item"
-        android:title="@string/settingsMenuItemTitle"
-        app:showAsAction="never" />
-
-</menu>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+        android:width="24dp"
+        android:height="24dp"
+        android:viewportWidth="24.0"
+        android:viewportHeight="24.0">
+    <path
+        android:pathData="M19,6.41L17.59,5 12,10.59 6.41,5 5,6.41 10.59,12 5,17.59 6.41,19 12,13.41 17.59,19 19,17.59 13.41,12z"
+        android:fillColor="#000000"/>
+</vector>
