--- a/app/src/main/res/layout/content_privacy_scorecard.xml
+++ b/app/src/main/res/layout/content_privacy_scorecard.xml
@@ -38,6 +38,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingBottom="30dp"
+            android:paddingTop="10dp"
             app:layout_constraintTop_toBottomOf="@id/privacyGrade">
 
             <TextView
@@ -47,7 +48,6 @@
                 android:layout_height="wrap_content"
                 android:drawableEnd="@drawable/icon_success"
                 tools:text="Encrypted Connection" />
-
 
             <TextView
                 android:id="@+id/trackers"
@@ -74,7 +74,6 @@
                 android:drawableEnd="@drawable/icon_fail"
                 android:text="@string/scorecardSiteIsMemberOfMajorNetwork" />
 
-
             <TextView
                 android:id="@+id/practices"
                 style="@style/ScorecardText"
@@ -86,10 +85,10 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_marginBottom="22dp"
+                android:layout_marginBottom="8dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="22dp"
+                android:layout_marginTop="8dp"
                 android:background="@color/divider" />
 
             <TextView
