--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -65,6 +65,7 @@
         <item name="android:textStyle">normal</item>
         <item name="android:textColor">@color/almostBlack</item>
         <item name="android:paddingBottom">12dp</item>
+        <item name="android:selectable">true</item>
         <item name="android:paddingTop">12dp</item>
         <item name="android:paddingEnd">20dp</item>
         <item name="android:paddingStart">20dp</item>
