--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,6 +23,10 @@
     <color name="orange">#de5833</color>
     <color name="brickOrange">#d03a10</color>
     <color name="powderBlue">#50BFFF</color>
+    <color name="lighMuddyGreen">#93B358</color>
+    <color name="muddyGreen">#58732e</color>
     <color name="midGreen">#3fa140</color>
 
+    <color name="lightWindowsBlue">#6FBDF9</color>
+    <color name="windowsBlue">#3c90c0</color>
 </resources>
