Add onboarding viewmodel logic and tests

--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -18,7 +18,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.duckduckgo.app.onboarding.OnboardingActivity">
+    tools:context="com.duckduckgo.app.onboarding.ui.OnboardingActivity">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
