--- a/app/src/main/res/layout/content_onboarding_no_trace.xml
+++ b/app/src/main/res/layout/content_onboarding_no_trace.xml
@@ -23,7 +23,7 @@
     android:paddingEnd="44dp"
     android:paddingStart="44dp"
     tools:background="@color/lightWindowsBlue"
-    tools:context="com.duckduckgo.app.onboarding.OnboardingActivity">
+    tools:context="com.duckduckgo.app.onboarding.ui.OnboardingActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -36,13 +36,15 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="80dp"
             android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            tools:ignore="UselessParent">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:paddingTop="20dp"
+                android:importantForAccessibility="no"
                 android:src="@drawable/onboarding_image_no_trace" />
 
             <TextView
@@ -84,7 +86,6 @@
 
     </LinearLayout>
 
-
     <Button
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="match_parent"
@@ -92,7 +93,8 @@
         android:layout_marginBottom="20dp"
         android:background="@color/windowsBlue"
         android:elevation="0dp"
-        android:text="Continue"
+        android:onClick="onContinueClicked"
+        android:text="@string/onboardingContinue"
         android:textAllCaps="false"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent" />
