--- a/app/src/main/res/menu/menu_home_activity.xml
+++ b/app/src/main/res/menu/menu_home_activity.xml
@@ -25,6 +25,11 @@
         app:showAsAction="ifRoom" />
 
     <item
+        android:id="@+id/bookmarks_menu_item"
+        android:title="@string/boomarksMenuTitle"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/settings_menu_item"
         android:title="@string/settingsMenuItemTitle"
         app:showAsAction="never" />
