--- a/app/src/main/res/layout/activity_about_duck_duck_go.xml
+++ b/app/src/main/res/layout/activity_about_duck_duck_go.xml
@@ -22,19 +22,7 @@
     android:layout_height="match_parent"
     tools:context="com.duckduckgo.app.about.AboutDuckDuckGoActivity">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-    </android.support.design.widget.AppBarLayout>
+    <include layout="@layout/include_toolbar" />
 
     <include layout="@layout/content_about_duck_duck_go" />
 
