--- a/app/src/main/res/menu/menu_browser_activity.xml
+++ b/app/src/main/res/menu/menu_browser_activity.xml
@@ -27,7 +27,7 @@
     <item
         android:id="@+id/fire_menu_item"
         android:icon="@drawable/icon_fire"
-        android:title="@string/privacyDashboard"
+        android:title="@string/fireMenu"
         android:visible="false"
         app:showAsAction="ifRoom" />
 
