--- a/app/src/main/res/menu/menu_browser_activity.xml
+++ b/app/src/main/res/menu/menu_browser_activity.xml
@@ -43,6 +43,16 @@
         app:showAsAction="never" />
 
     <item
+        android:id="@+id/bookmarks_menu_item"
+        android:title="@string/boomarksMenuTitle"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/add_bookmark_menu_item"
+        android:title="@string/addBookmarkMenuTitle"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/settings_menu_item"
         android:title="@string/settingsMenuItemTitle"
         app:showAsAction="never" />
