--- a/app/src/main/res/layout/activity_browser.xml
+++ b/app/src/main/res/layout/activity_browser.xml
@@ -152,9 +152,9 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/autoCompleteSuggestionsList"
+            android:background="@color/charcoalGrey"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="4dp"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     </android.support.design.widget.CoordinatorLayout>
