--- a/app/src/main/res/layout/activity_browser.xml
+++ b/app/src/main/res/layout/activity_browser.xml
@@ -154,7 +154,9 @@
             android:id="@+id/autoCompleteSuggestionsList"
             android:background="@color/charcoalGrey"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            android:layout_height="wrap_content"
+            android:paddingBottom="14dp"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     </android.support.design.widget.CoordinatorLayout>
