--- a/app/src/main/res/drawable/ic_globe_white_24dp.xml
+++ b/app/src/main/res/drawable/ic_globe_white_24dp.xml
@@ -14,12 +14,13 @@
   ~ limitations under the License.
   -->
 
+
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24dp"
-        android:height="24dp"
-        android:viewportWidth="24.0"
-        android:viewportHeight="24.0">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportHeight="16.0"
+    android:viewportWidth="16.0">
     <path
         android:fillColor="#FFF"
-        android:pathData="M13.127,14.56l1.43,-1.43 6.44,6.443L19.57,21zM17.42,8.83l2.86,-2.86c-3.95,-3.95 -10.35,-3.96 -14.3,-0.02 3.93,-1.3 8.31,-0.25 11.44,2.88zM5.95,5.98c-3.94,3.95 -3.93,10.35 0.02,14.3l2.86,-2.86C5.7,14.29 4.65,9.91 5.95,5.98zM5.97,5.96l-0.01,0.01c-0.38,3.01 1.17,6.88 4.3,10.02l5.73,-5.73c-3.13,-3.13 -7.01,-4.68 -10.02,-4.3z"/>
+        android:pathData="M12.72,12.312A1.588,1.588 0,0 0,11.2 11.2h-0.8V8.8c0,-0.44 -0.36,-0.8 -0.8,-0.8H4.8V6.4h1.6c0.44,0 0.8,-0.36 0.8,-0.8V4h1.6c0.88,0 1.6,-0.72 1.6,-1.6v-0.328c2.343,0.952 4,3.248 4,5.928 0,1.664 -0.64,3.176 -1.68,4.312zM7.2,14.344A6.39,6.39 0,0 1,1.6 8c0,-0.496 0.064,-0.968 0.168,-1.432L5.6,10.4v0.8c0,0.88 0.72,1.6 1.6,1.6v1.544zM8,0C3.584,0 0,3.584 0,8s3.584,8 8,8c4.415,0 8,-3.584 8,-8s-3.585,-8 -8,-8z" />
 </vector>
