Update placeholder colors

--- a/app/src/main/res/layout/content_onboarding_protect_data.xml
+++ b/app/src/main/res/layout/content_onboarding_protect_data.xml
@@ -23,7 +23,7 @@
     android:layout_height="match_parent"
     android:paddingEnd="44dp"
     android:paddingStart="44dp"
-    tools:background="@color/lighMuddyGreen"
+    tools:background="@color/lighOliveGreen"
     tools:context="com.duckduckgo.app.onboarding.ui.OnboardingActivity">
 
     <LinearLayout
