--- a/app/src/main/res/layout/content_onboarding_no_trace.xml
+++ b/app/src/main/res/layout/content_onboarding_no_trace.xml
@@ -22,7 +22,7 @@
     android:layout_height="match_parent"
     android:paddingEnd="44dp"
     android:paddingStart="44dp"
-    tools:background="@color/lightWindowsBlue"
+    tools:background="@color/skyBlue"
     tools:context="com.duckduckgo.app.onboarding.ui.OnboardingActivity">
 
     <LinearLayout
