Wire autocomplete suggestions UI up to omnibar and data store

--- a/app/src/main/res/layout/content_settings.xml
+++ b/app/src/main/res/layout/content_settings.xml
@@ -27,6 +27,13 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <android.support.v7.widget.SwitchCompat
+            android:id="@+id/autocompleteEnabledSetting"
+            android:text="@string/settings_autocomplete_enabled"
+            style="@style/SettingsContentLabel"
+            app:theme="@style/SettingsContentLabel.SettingsSwitch"
+            tools:checked="true" />
+
         <TextView
             style="@style/SettingsContentLabel"
             android:text="@string/settingsVersion" />
