Use `@+id` instead of `@id` to help tools render layout

--- a/app/src/main/res/layout/item_autocomplete_suggestion.xml
+++ b/app/src/main/res/layout/item_autocomplete_suggestion.xml
@@ -37,7 +37,7 @@
         android:layout_height="match_parent"
         android:layout_centerVertical="true"
         android:layout_toEndOf="@id/phraseOrUrlIndicator"
-        android:layout_toStartOf="@id/editQueryImage"
+        android:layout_toStartOf="@+id/editQueryImage"
         android:ellipsize="end"
         android:fontFamily="sans-serif"
         android:gravity="center_vertical|start"
