--- a/app/src/main/res/drawable/ic_search_white_24dp.xml
+++ b/app/src/main/res/drawable/ic_search_white_24dp.xml
@@ -15,11 +15,11 @@
   -->
 
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24dp"
-        android:height="24dp"
-        android:viewportWidth="24.0"
-        android:viewportHeight="24.0">
+    android:width="18dp"
+    android:height="18dp"
+    android:viewportHeight="18.0"
+    android:viewportWidth="18.0">
     <path
         android:fillColor="#FFF"
-        android:pathData="M15.5,14h-0.79l-0.28,-0.27C15.41,12.59 16,11.11 16,9.5 16,5.91 13.09,3 9.5,3S3,5.91 3,9.5 5.91,16 9.5,16c1.61,0 3.09,-0.59 4.23,-1.57l0.27,0.28v0.79l5,4.99L20.49,19l-4.99,-5zM9.5,14C7.01,14 5,11.99 5,9.5S7.01,5 9.5,5 14,7.01 14,9.5 11.99,14 9.5,14z"/>
+        android:pathData="M6.69,11.32a4.625,4.625 0,0 1,-4.632 -4.63A4.625,4.625 0,0 1,6.69 2.058a4.625,4.625 0,0 1,4.63 4.632,4.625 4.625,0 0,1 -4.63,4.63zM12.864,11.32h-0.813l-0.288,-0.277A6.66,6.66 0,0 0,13.38 6.69a6.69,6.69 0,1 0,-6.69 6.69,6.66 6.66,0 0,0 4.354,-1.617l0.278,0.288v0.813L16.467,18 18,16.467l-5.136,-5.146z" />
 </vector>
