--- a/app/src/main/res/drawable/ic_add_white_24dp.xml
+++ b/app/src/main/res/drawable/ic_add_white_24dp.xml
@@ -1,5 +1,5 @@
 <!--
-  ~ Copyright (c) 2017 DuckDuckGo
+  ~ Copyright (c) 2018 DuckDuckGo
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -15,11 +15,11 @@
   -->
 
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="18dp"
-    android:height="18dp"
-    android:viewportHeight="18.0"
-    android:viewportWidth="18.0">
+        android:width="24dp"
+        android:height="24dp"
+        android:viewportWidth="24.0"
+        android:viewportHeight="24.0">
     <path
         android:fillColor="#FFF"
-        android:pathData="M6.69,11.32a4.625,4.625 0,0 1,-4.632 -4.63A4.625,4.625 0,0 1,6.69 2.058a4.625,4.625 0,0 1,4.63 4.632,4.625 4.625,0 0,1 -4.63,4.63zM12.864,11.32h-0.813l-0.288,-0.277A6.66,6.66 0,0 0,13.38 6.69a6.69,6.69 0,1 0,-6.69 6.69,6.66 6.66,0 0,0 4.354,-1.617l0.278,0.288v0.813L16.467,18 18,16.467l-5.136,-5.146z" />
+        android:pathData="M19,13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/>
 </vector>
