--- a/app/src/main/res/drawable/ic_globe_white_24dp.xml
+++ b/app/src/main/res/drawable/ic_globe_white_24dp.xml
@@ -1,5 +1,5 @@
 <!--
-  ~ Copyright (c) 2017 DuckDuckGo
+  ~ Copyright (c) 2018 DuckDuckGo
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -14,12 +14,13 @@
   ~ limitations under the License.
   -->
 
+
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="18dp"
-    android:height="18dp"
-    android:viewportHeight="18.0"
-    android:viewportWidth="18.0">
+    android:width="16dp"
+    android:height="16dp"
+    android:viewportWidth="16.0"
+    android:viewportHeight="16.0">
     <path
-        android:fillColor="#FFF"
-        android:pathData="M6.69,11.32a4.625,4.625 0,0 1,-4.632 -4.63A4.625,4.625 0,0 1,6.69 2.058a4.625,4.625 0,0 1,4.63 4.632,4.625 4.625,0 0,1 -4.63,4.63zM12.864,11.32h-0.813l-0.288,-0.277A6.66,6.66 0,0 0,13.38 6.69a6.69,6.69 0,1 0,-6.69 6.69,6.66 6.66,0 0,0 4.354,-1.617l0.278,0.288v0.813L16.467,18 18,16.467l-5.136,-5.146z" />
+        android:pathData="M12.72,12.312A1.588,1.588 0,0 0,11.2 11.2h-0.8V8.8c0,-0.44 -0.36,-0.8 -0.8,-0.8H4.8V6.4h1.6c0.44,0 0.8,-0.36 0.8,-0.8V4h1.6c0.88,0 1.6,-0.72 1.6,-1.6v-0.328c2.343,0.952 4,3.248 4,5.928 0,1.664 -0.64,3.176 -1.68,4.312zM7.2,14.344A6.39,6.39 0,0 1,1.6 8c0,-0.496 0.064,-0.968 0.168,-1.432L5.6,10.4v0.8c0,0.88 0.72,1.6 1.6,1.6v1.544zM8,0C3.584,0 0,3.584 0,8s3.584,8 8,8c4.415,0 8,-3.584 8,-8s-3.585,-8 -8,-8z"
+        android:fillColor="#FFF"/>
 </vector>
