Tidy up menu enable / disable logic

--- a/app/src/main/res/menu/menu_browser_activity.xml
+++ b/app/src/main/res/menu/menu_browser_activity.xml
@@ -50,6 +50,7 @@
     <item
         android:id="@+id/add_bookmark_menu_item"
         android:title="@string/addBookmarkMenuTitle"
+        android:enabled="false"
         app:showAsAction="never" />
 
     <item
