--- a/app/src/main/res/drawable/ic_arrow_back_24px.xml
+++ b/app/src/main/res/drawable/ic_arrow_back_24px.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<!--
   ~ Copyright (c) 2018 DuckDuckGo
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -14,19 +14,12 @@
   ~ limitations under the License.
   -->
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <item
-        android:id="@+id/fire_menu_item"
-        android:icon="@drawable/icon_fire"
-        android:title="@string/privacyDashboard"
-        app:showAsAction="ifRoom" />
-
-    <item
-        android:id="@+id/browser_popup_menu_item"
-        android:icon="@drawable/ic_overflow_24px"
-        android:title="@string/browserPopupMenu"
-        app:showAsAction="ifRoom" />
-
-</menu>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+        android:width="24dp"
+        android:height="24dp"
+        android:viewportWidth="24.0"
+        android:viewportHeight="24.0">
+    <path
+        android:pathData="M20,11H7.83l5.59,-5.59L12,4l-8,8 8,8 1.41,-1.41L7.83,13H20v-2z"
+        android:fillColor="#FFFFFF"/>
+</vector>
