--- a/app/src/main/res/menu/menu_browser_activity.xml
+++ b/app/src/main/res/menu/menu_browser_activity.xml
@@ -32,30 +32,9 @@
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/back_menu_item"
-        android:title="@string/back" />
-    <item
-        android:id="@+id/forward_menu_item"
-        android:title="@string/forward" />
-    <item
-        android:id="@+id/refresh_menu_item"
-        android:title="@string/refresh"
-        app:showAsAction="never" />
-
-    <item
-        android:id="@+id/bookmarks_menu_item"
-        android:title="@string/boomarksMenuTitle"
-        app:showAsAction="never" />
-
-    <item
-        android:id="@+id/add_bookmark_menu_item"
-        android:title="@string/addBookmarkMenuTitle"
-        android:enabled="false"
-        app:showAsAction="never" />
-
-    <item
-        android:id="@+id/settings_menu_item"
-        android:title="@string/settingsMenuItemTitle"
-        app:showAsAction="never" />
+        android:id="@+id/browser_popup_menu_item"
+        android:icon="@drawable/ic_overflow_24px"
+        android:title="@string/browserPopupMenu"
+        app:showAsAction="ifRoom" />
 
 </menu>
