--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -158,4 +158,58 @@
         <item name="android:color">@color/browser_menu_text</item>
     </style>
 
+    <style name="OnboardingButtonStyle" parent="Widget.AppCompat.Button.Colored">
+        <item name="android:elevation">0dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">@dimen/onboardingButtonTextSize</item>
+        <item name="android:paddingTop">@dimen/onboardingButtonPadding</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:paddingBottom">@dimen/onboardingButtonPadding</item>
+        <item name="android:layout_marginBottom">20dp</item>
+        <item name="android:onClick">onContinueClicked</item>
+        <item name="android:text">@string/onboardingContinue</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="layout_constraintBottom_toBottomOf">parent</item>
+        <item name="android:stateListAnimator">@null</item>
+
+    </style>
+
+    <style name="OnboardingButtonProtectData" parent="OnboardingButtonStyle">
+        <item name="colorAccent">@color/muddyGreen</item>
+    </style>
+
+    <style name="OnboardingButtonNoTrace" parent="OnboardingButtonStyle">
+        <item name="colorAccent">@color/windowsBlue</item>
+    </style>
+
+    <style name="OnboardingTextTitle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:paddingBottom">20dp</item>
+        <item name="android:paddingTop">20dp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/onboardingTitleTextSize</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="OnboardingTextSubtitle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:lineSpacingExtra">4sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/onboardingSubtitleTextSize</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="OnboardingTextSubtitle.Subtitle2">
+        <item name="android:paddingTop">16dp</item>
+        <item name="android:lineSpacingExtra">6sp</item>
+    </style>
+
+
 </resources>
