--- a/app/src/main/res/layout/content_bookmarks.xml
+++ b/app/src/main/res/layout/content_bookmarks.xml
@@ -17,6 +17,8 @@
 
 <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/recycler"
+    android:paddingTop="18dp"
+    android:paddingBottom="18dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
